--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,10 @@
     box-sizing: border-box;
 }
 
+#display {
+    border: 1px solid black;
+    min-height: 200px;
+    width: 300px;
+    margin-top: 10px;
+
+}
